fix: test change backface visibility for io's

--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,10 @@ main {
             transform-style: preserve-3d;
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
+    -webkit-perspective: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0);
+    visibility:visible;
 }
 .dice-animate {
     -webkit-animation: spin .6s ease-in-out;
